# inference-benchmark

./: .gitignore  README.md  docker-compose.yml
cpp-backend/: CMakeLists.txt  Dockerfile
cpp-backend/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp-backend/include/: inference_engine.h
cpp-backend/src/: inference_engine.cpp  main.cpp
docs/: performance.md
frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
frontend/public/: imagenet_classes.json  index.html
frontend/src/: App.vue
frontend/src/components/: PerformanceChart.vue
models/: resnet18.onnx
nginx/: nginx.conf
python-backend/: Dockerfile  app.py  requirements.txt
scripts/: benchmark_full.sh  benchmark_report_20260419_115443.txt  export_model.py
